discussion/kv_engine/174506/174506_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-51606: Update seqno ack to send outside state lock

In a future change we will add VB state lock acquisition to the seqno
ack path after we take the seqnoToAck lock. This introduces a lock
order inversion as we currently have a thread taking the PDM state lock
while holding the VB state lock, and another thread taking the
seqnoToAck lock while holding the PDM state lock. To break this cycle
we can remove the seqnoToAck lock acquisition outside of the PDM state
lock.

Change-Id: I9aaeda66c15d15857d875e5d4d06470c0e161806

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-05-05 19:02:12.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2022-05-05 19:02:24.000000000
Message: 
Patch Set 2: Well-Formed+1

Permission granted to commit: 

http://server.jenkins.couchbase.com/job/restricted-branch-check/297760/artifact/restricted.html : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-05-05 19:44:16.000000000
Message: 
Patch Set 2: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/159/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/durability/active_durability_monitor.h:232:58: error: non-virtual member function marked "override" hides virtual member function [clang-diagnostic-error]
            folly::SharedMutex::ReadHolder& vbStateLock) override;
                                                         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/durability/durability_monitor.h:69:18: note: hidden overloaded virtual function "DurabilityMonitor::notifyLocalPersistence" declared here: type mismatch at 1st parameter ("int &" vs "folly::SharedMutex::ReadHolder &")
    virtual void notifyLocalPersistence(
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/durability/durability_monitor.h:70:13: error: use of undeclared identifier "folly" [clang-diagnostic-error]
            folly::SharedMutex::ReadHolder& vbStateLock) = 0;
            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/durability/passive_durability_monitor.h:180:58: error: non-virtual member function marked "override" hides virtual member function [clang-diagnostic-error]
            folly::SharedMutex::ReadHolder& vbStateLock) override;
                                                         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/durability/durability_monitor.h:69:18: note: hidden overloaded virtual function "DurabilityMonitor::notifyLocalPersistence" declared here: type mismatch at 1st parameter ("int &" vs "folly::SharedMutex::ReadHolder &")
    virtual void notifyLocalPersistence(
                 ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/159/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/durability/active_durability_monitor.h:232:58:
error: non-virtual member function marked "override" hides virtual member function [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/159/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/157/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-neo/kv_engine/engines/ep/src/durability/durability_monitor.h:70:13:
error: use of undeclared identifier "folly"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/157/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/158/ : FAILURE

Compile error at [2022-05-05T19:09:26.928Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_neo/kv_engine/engines/ep/src/durability/durability_monitor.h:70:13:
error: use of undeclared identifier "folly"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/158/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/178/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/178/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/202/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/16302/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/152/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/162/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/161/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/165/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/161/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
